--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,10 @@
   --color-crimson: #f5efdb;
   --color-grey: #aaaaaa;
   --color-white: #ffffff;
+
+  background-color: var(--color-black);
+  color: var(--color-white);
+  font-family: var(--font-base);
 }
 
 * {
