--- a/src/App.scss
+++ b/src/App.scss
@@ -68,29 +68,16 @@
   text-transform: capitalize;
 }
 
-.spoon__img {
-  width: 45px;
-}
 // TODO move type mixins into _typeography mixin
 @media screen and (min-width: 2000px) {
-  .custom__button,
-  .p__cormorant {
+  .custom__button {
     font-size: 37px;
     line-height: 67px;
-  }
-
-  .p__opensans {
-    font-size: 30px;
-    line-height: 50px;
   }
 
   .headtext__cormorant {
     font-size: 150px;
     line-height: 210px;
-  }
-
-  .spoon__img {
-    width: 80px;
   }
 }
 
@@ -112,35 +99,7 @@
   }
 }
 
-@media screen and (max-width: 850px) {
-  .section__padding {
-    padding: 4rem;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .section__padding {
-    padding: 4rem 2rem;
-  }
-
-  .p__cormorant {
-    font-size: 21px;
-  }
-
-  .p__opensans {
-    font-size: 14px;
-  }
-}
-
 @media screen and (max-width: 450px) {
-  .p__opensans {
-    font-size: 12px;
-  }
-
-  .p__cormorant {
-    font-size: 19px;
-  }
-
   .headtext__cormorant {
     font-size: 45px;
     line-height: 70px;
