feat: menu section

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,26 +36,32 @@
         width: 80%;
       }
 
-      .custom__button {
-        background-color: var(--color-crimson);
-        color: var(--color-black);
-        font-family: var(--font-base);
-        font-weight: 700;
-        letter-spacing: 0.04em;
-        line-height: 28px;
-        font-size: 16px;
-        padding: 0.5rem 1.5rem;
-        border-radius: 1px;
-        border: none;
-        outline: none;
-        cursor: pointer;
-      }
-
       &-reverse {
         justify-content: flex-start;
         margin-right: 2rem;
       }
     }
+  }
+}
+
+.custom__button {
+  background-color: var(--color-crimson);
+  color: var(--color-black);
+  font-family: var(--font-base);
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  line-height: 28px;
+  font-size: 16px;
+  padding: 0.5rem 1.5rem;
+  border-radius: 1px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border: 1px solid var(--color-crimson);
+
+  &:hover {
+    background-color: transparent;
+    color: var(--color-crimson);
   }
 }
 
