--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@
   --color-black: #0c0c0c;
   --color-gray: #545454;
   --color-crimson: #f5efdb;
-  --color-grey: #aaaaaa;
+  --color-gray-light: #aaaaaa;
   --color-white: #ffffff;
 
   background-color: var(--color-black);
